src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/TestDataCheckDao/expandDirective.sql
SELECT /*%expand*/* FROM employee
 WHERE rank < <error descr="Test data is required after a bind variable directive or a literal variable directive">/* emplotee.rank */</error>*
